--- a/templates/employeeDetail.html
+++ b/templates/employeeDetail.html
@@ -5,23 +5,51 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Encantando|Detalle empleados</title>
+    <style>
+        button {
+            display: inline-block;
+            background-color: #7b38d8;
+            padding: 20px;
+            width: 200px;
+            color: #ffffff;
+            text-align: center;
+            border: 4px double #cccccc;
+            border-radius: 10px;
+            font-size: 28px;
+            cursor: pointer;
+            margin: 5px;
+            -webkit-transition: all 0.5s; /* add this line, chrome, safari, etc */
+            -moz-transition: all 0.5s; /* add this line, firefox */
+            -o-transition: all 0.5s; /* add this line, opera */
+            transition: all 0.5s; /* add this line */
+        }
+        button:hover {
+            background-color: rgb(39, 108, 39);
+        }
+      </style>
 </head>
 <body>
     {%extends "base.html"%}
 
     {%block content%}
-    {%for item in object_list%}
-        <h1>Name: {{item.nombre_completo}}</h1>
-            <img src="{{item.foto.url}}" style="height:150px; border-radius: 50%; border: 10px solid #FEDE00;"/>
-            <ul>
-                <li>Cédula: {{item.cédula}}</li>
-                <li>Celular: {{item.celular}}</li>
-                <li>Correo electrónico: {{item.corre_electrónico}}</li>
-                <li>Talla zapatos: {{item.talla_zapatos}}</li>
-                <li>rut: {{item.rut.url}}
-                </li>
-            </ul>
-    {%endfor%}
+    <div class="row">
+        <div class="col-md-3">
+            <div class="card card-body"></div>
+                <h1>{{object.nombre_completo}}</h1>
+                    <img src="{{object.foto.url}}" style="height:150px; border-radius: 50%; border: 10px solid #FEDE00;"/>
+                    <ul>
+                        <li>Cédula: {{object.cédula}}</li>
+                        <li>Celular: {{object.celular}}</li>
+                        <li>Correo electrónico: {{object.corre_electrónico}}</li>
+                        <li>Talla zapatos: {{object.talla_zapatos}}</li>
+                        <li>rut: {{object.rut.url}}</li>
+                    </ul>
+                    <a href="{% url 'updateemployee' %}">
+                    <button type="button">Actualizar</button>
+                    </a>
+            </div>
+        </div>
+    </div>
     {%endblock%}
 </body>
 </html>
