--- a/templates/employeeUpdate.html
+++ b/templates/employeeUpdate.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Encantando|Crear empleado</title>
+    <title>Encantando|Actualizar</title>
 </head>
 <body>
-    {%extends "base.html"%}
+    {%extends 'base.html'%}
 
     {%block content%}
     <div class="row">
         <div class="col-md-9">
             <div class="card card-body">
 
-                <form method="post" action="." enctype="multipart/form-data">
+                <form method="PUT" action="." enctype="multipart/form-data">
                     {%csrf_token%}
                     <table>
                         {{form.as_table}}
@@ -26,6 +26,5 @@
         </div>
     </div>
     {%endblock%}
-    </form>
 </body>
 </html>
