--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -5,7 +5,7 @@
     <img src="{% static 'media/logo_footer_encantando.png' %}" />
   </article>
   <article>
-    <p>Copyright Encantando</p>
+    <p>Copyright Encantando Show</p>
   </article>
 </footer>
 </body>
