--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -4,7 +4,7 @@
 </header>
 <nav>
   <ul>
-    <li><a href="{% url 'createmp' %}">Crear Nuevo Empleado</a></li>
+    <li><a href="{% url 'createemp' %}">Crear Nuevo Empleado</a></li>
     <li><a href="{% url 'listemp' %}">Ver empleados</a></li>
   </ul>
 </nav>
