--- a/templates/employeeCreate.html
+++ b/templates/employeeCreate.html
@@ -14,12 +14,12 @@
         <div class="col-md-9">
             <div class="card card-body">
 
-                <form method="post" action="." enctype="multipart/form-data">
+                <form method="post" action="" enctype="multipart/form-data">
                     {%csrf_token%}
                     <table>
                         {{form.as_table}}
                     </table>
-                    <input type="submit" value="Actualizar">
+                    <input type="submit" value="Crear">
                 </form>
 
             </div>
