--- a/templates/employeeUpdate.html
+++ b/templates/employeeUpdate.html
@@ -14,11 +14,11 @@
         <div class="col-md-9">
             <div class="card card-body">
 
-                <form method="PUT" action="." enctype="multipart/form-data">
+                <form method="POST" action="" enctype="multipart/form-data">
                     {%csrf_token%}
-                    <table>
+                        <table>
                         {{form.as_table}}
-                    </table>
+                        </table>
                     <input type="submit" value="Actualizar">
                 </form>
 
