--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -4,7 +4,8 @@
 </header>
 <nav>
   <ul>
-    <li><a href="{% url 'createemp' %}">Crear Nuevo Empleado</a></li>
-    <li><a href="{% url 'listemp' %}">Ver empleados</a></li>
+    <li><a href="{% url 'createemp' %}">Crear Nuevo Artista</a></li>
+    <li><a href="{% url 'listemp' %}">Ver Artistas</a></li>
   </ul>
 </nav>
+  
