No big changes, only some changes on models name and vairble names to make it more precise

--- a/templates/employeeDetailContact.html
+++ b/templates/employeeDetailContact.html
@@ -35,11 +35,11 @@
     <div class="row">
         <div class="col-md-3">
             <div class="card card-body"></div>
-                <h1>{{object.nombre_completo}}</h1>
+                <h1>{{object.nombre}}</h1>
                     <img src="{{object.foto.url}}" style="height:150px; border-radius: 50%; border: 10px solid #FEDE00;"/>
 
-                        <h2>Fecha de nacimiento:</h2>
-                        {{object.fecha_de_nacimiento}}
+                        <h2>Edad:</h2>
+                        {{object.edad}}
                         <h2>Cédula:</h2>
                         {{object.cédula}}
                         <h2>Dirección: </h2>
