--- a/templates/employeeDetail.html
+++ b/templates/employeeDetail.html
@@ -35,7 +35,7 @@
     <div class="row">
         <div class="col-md-3">
             <div class="card card-body"></div>
-                <h1>{{object.nombre_completo}}</h1>
+                <h1>{{object.nombre}}</h1>
                     <img src="{{object.foto.url}}" style="height:150px; border-radius: 50%; border: 10px solid #FEDE00;"/>
             </div>
         </div>
