register, log in, log out
Implemented a user database to have security on the website, still working on the permissions with classed based views

--- a/templates/employeeDetail.html
+++ b/templates/employeeDetail.html
@@ -49,6 +49,9 @@
             <a href="{% url 'showdocuments' pk=object.pk%}">
                 <button type="button">Documentos</button>
             </a>
+            <a href="{% url 'deleteemp' pk=object.pk%}">
+                <button type="button">Eliminar</button>
+            </a>
         </div>
     </div>
     {%endblock%}
