--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -6,6 +6,7 @@
   <ul>
     <li><a href="{% url 'createemp' %}">Crear Nuevo Artista</a></li>
     <li><a href="{% url 'listemp' %}">Ver Artistas</a></li>
+    <li><a href="{% url 'logout' %}">Salir</a></li>
   </ul>
 </nav>
   
