--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
     <link
       rel="shortcut icon"
       type="image/png"
-      href="{% static 'media/favicon_encantando.ico' %}"
+      href="{% static 'media/favicon.ico' %}"
     />
 
     <!-- Include your CSS files here -->
@@ -34,6 +34,16 @@
       href="https://fonts.googleapis.com/css2?family=Karla&family=Markazi+Text:wght@500&display=swap"
       rel="stylesheet"
     />
+
+    <style>
+      body,
+      html {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        background: #abe6f1 !important;
+      }
+    </style>
   </head>
 
   <body>
